<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HuskyBus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="storage_path">/huskybus</string>
    <string name="routes_file">/bus_routes.txt</string>
    <string name="routes_url">http://uconnshuttle.com/Services/JSONPRelay.svc/GetRoutesForMapWithSchedule</string>
    
    <!-- Find Fragment -->
    <string name="title_section1">Find</string>
    <string name="welcome">Welcome to the Unofficial UConn Bus App! Select one of the following options to get a bus route.</string>
    <string name="custom_locations">Use the following button to select a preset destination.</string>
    <string name="destination_hint">Destination</string>
    <string name="search">Search</string>
    <string name="go_home">Go Home</string>
    
    <!-- Map Fragment -->
    <string name="title_section2">Map</string>
    <string name="swipe_here">&lt;&lt;&#8212;&#8212;&#160;&#160;&#160;&#160;Swipe Here&#160;&#160;&#160;&#160;&#8212;&#8212;&gt;&gt;</string>
    <string name="university">UConn</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    
    <!-- Settings Fragment -->
    <string name="title_section3">Settings</string>
    <string name="lng">Longitude</string>
    <string name="submit">Submit</string>
    
    <!-- Preferences -->
    <string name="home_lat"></string>
    <string name="home_lng"></string>
    <string name="home_zoom"></string> 

</resources>